# ComfyUI-BETA-Helpernodes

./: BETA-cropnodes.py  BETA_cropnodes.py  BETA_scenedetect.py  CLAUDE.md  __init__.py  audio_saver.py  indexed_lora_loader.py  load_text_node.py  pyproject.toml  readme.md  requirements.txt  sharpness_clipper.py  text_line_count.py  wan_calculator.py
js/: betaHelperNodes.js
